<resources>
    <string name="app_name">WMoney</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_menu_pockets">Кошельки</string>
    <string name="nav_menu_categories">Категории</string>
    <string name="nav_menu_currencyes">Валюты</string>
    <string name="nav_menu_settings">Настройки</string>
    <string name="nav_menu_debit">Доходы</string>
    <string name="nav_menu_credit">Расходы</string>
    <string name="nav_menu_trans">Переводы</string>

    <string name="menu_action_save">Сохранить</string>
    <string name="menu_action_edit">Редактировать</string>
    <string name="menu_action_delete">Удалить</string>

    <string name="currency_name_label">Кратко</string>
    <string name="currency_describe_label">Наименование</string>

    <string name="title_activity_account_item">Кошелек</string>
    <string name="title_activity_category_item">Категория дохода/расхода</string>
    <string name="title_activity_currency_item">Валюта</string>
    <string name="title_activity_credit_item">Расход/затрата</string>
    <string name="title_activity_debit_item">Доход/поступление</string>
    <string name="title_activity_transfer_item">Перемещение средств</string>
    <string name="title_activity_google_drive_sync">Синхронизация</string>

    <string name="title_activity_account_list">Кошельки</string>
    <string name="title_activity_currency_list">Валюты</string>
    <string name="title_activity_category_list">Категории доходов/расходов</string>
    <string name="title_activity_credit_list">Расходы/затраты</string>
    <string name="title_activity_transfer_list">Переводы</string>
    <string name="title_activity_debit_list">Доходы/поступления</string>

    <string name="account_describe_label">Описание</string>
    <string name="account_name_label">Наименование</string>
    <string name="account_summa_label">Остаток</string>

    <string name="category_name_label">Наименование</string>
    <string name="category_describe_label">Описание</string>
    <string name="category_isDebit">Доход</string>
    <string name="category_isCredit">Затрата</string>

    <string name="operation_name_label">Название операции</string>
    <string name="operation_describe_label">Описание</string>
    <string name="operation_summa_label">Сумма операции</string>
    <string name="operation_category_item">Статья</string>
    <string name="operation_period_item">Период</string>

    <string name="transfer_describe_label">Описание</string>
    <string name="transfer_summaFrom_label">Сумма (списано)</string>
    <string name="transfer_accountFrom_item">Из кошелька</string>
    <string name="transfer_name_label">Перевод</string>
    <string name="transfer_accountTo_item">В кошелек</string>
    <string name="transfer_summaTo_label">Сумма (зачислено)</string>
    <string name="transfer_course_label">Курс</string>
</resources>
