<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item android:title="Операции">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_debit"
                    android:title="@string/nav_menu_debit"/>
                <item
                    android:id="@+id/nav_credit"
                    android:title="@string/nav_menu_credit"/>
                <item
                    android:id="@+id/nav_trans"
                    android:title="@string/nav_menu_trans"/>
                </group>
            </menu>
        </item>

        <item android:title="Справочники">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_pockets"
                    android:title="@string/nav_menu_pockets"/>
                <item
                    android:id="@+id/nav_categories"
                    android:title="@string/nav_menu_categories"/>
                <item
                    android:id="@+id/nav_currencyes"
                    android:title="@string/nav_menu_currencyes"/>
                </group>
            </menu>
        </item>
        <item android:title="Прочее">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/nav_menu_settings"/>
                </group>
            </menu>
        </item>

</menu>
