<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              tools:context="com.wolff.wmoney.fragments.operation.Operation_item_fragment"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edOperation_Name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="8"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/edOperation_Name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="8"
                android:ems="10"
                android:hint="@string/operation_name_label"
                android:inputType="textPersonName"
                android:text=""
                android:theme="@style/MyEditText"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tvOperation_Period_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/title_period_item_credit"/>

        <Button
            android:id="@+id/imOperation_Period"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="3"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tvOperation_account_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/title_activity_account_item"/>

        <ImageView
            android:id="@+id/ivAccountPicture"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20"/>

        <Button
            android:id="@+id/imOperation_account"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="120"
            android:contentDescription="@string/account_name_label"
            android:elevation="4dp"
            app:srcCompat="@mipmap/ic_launcher"/>

    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edOperation_summa_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="8"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/edOperation_summa"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="120dp"
                android:ems="10"
                android:hint="@string/operation_summa_label"
                android:inputType="numberDecimal"
                android:text=""
                android:theme="@style/MyEditText"/>

        </android.support.design.widget.TextInputLayout>

         <TextView
             android:id="@+id/tvOperation_currency"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="18"
             android:gravity="center_vertical"/>

    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

         <TextView
             android:id="@+id/tvOperation_category_label"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="@string/title_category_item_credit"/>

         <Button
             android:id="@+id/imOperation_category"
             style="@android:style/Widget.Button.Inset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="3"/>

     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edOperation_describe_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="3"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:id="@+id/edOperation_describe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="8"
                android:ems="10"
                android:hint="@string/operation_describe_label"
                android:inputType="textPersonName"
                android:lines="3"
                android:text=""
                android:theme="@style/MyEditText"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


</LinearLayout>
